# aez

./: Cargo.toml  README.md  build.rs
aez_amd64_aesni_asm/: aez_amd64.S
aez_amd64_aesni_c/: encrypt.c
aez_ref_c/: slow_encrypt.c
benches/: aez_decrypt_benchmark.rs
src/: aez.rs  aez_amd64.rs  aez_binding.rs  error.rs  errors.rs  fu.rs  lib.rs
